--- a/TodayWeather/Presentation Layer/Base.lproj/Main.storyboard
+++ b/TodayWeather/Presentation Layer/Base.lproj/Main.storyboard
@@ -276,8 +276,8 @@
                                             </activityIndicatorView>
                                         </subviews>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="E2r-sB-fWb">
-                                        <rect key="frame" x="72.000000000000014" y="243" width="199.33333333333337" height="42"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="E2r-sB-fWb">
+                                        <rect key="frame" x="68.000000000000014" y="243" width="207.33333333333337" height="42"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="01d" translatesAutoresizingMaskIntoConstraints="NO" id="PtQ-TR-hgA">
                                                 <rect key="frame" x="0.0" y="0.0" width="99.666666666666671" height="42"/>
@@ -286,7 +286,7 @@
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PTP-oQ-WbL">
-                                                <rect key="frame" x="99.666666666666657" y="0.0" width="99.666666666666657" height="42"/>
+                                                <rect key="frame" x="107.66666666666666" y="0.0" width="99.666666666666657" height="42"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
